--- a/src/main/resources/templates/emprestimo/home.html
+++ b/src/main/resources/templates/emprestimo/home.html
@@ -13,32 +13,12 @@
 <body>
 	<nav class="navbar navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand">Borrowed Money</a> 
-			<a href="/emprestimo/novo">
+			<a class="navbar-brand">Borrowed Money</a> <a href="/emprestimo/formulario">
 				<button class="btn btn-outline-primary">Novo</button>
 			</a>
 		</div>
 	</nav>
-	<div class="container-fluid">
-		<!-- 
-		<div th:each="emprestimo : ${emprestimos}" class="mt-3">
-			<div class="card">
-				<div class="card-header">Featured</div>
-				<div class="card-body">
-					<h5 class="card-title">Special title treatment</h5>
-					<p class="card-text">With supporting text below as a natural
-						lead-in to additional content.</p>
-					<a href="#" class="btn btn-primary">Go somewhere</a>
-				</div>
-			</div>
-		</div>
-		-->
-		<!-- 
-<div class="row mt-3" th:each="emprestimo : ${emprestimos.content}">
-<span th:text="${emprestimo.data}">Oi</span>
-</div>
--->
-
+	<div class="container">
 		<div class="row mt-3" th:each="emprestimo : ${emprestimos.content}">
 			<div class="col">
 				<div class="card" style="width: 18rem;">
