--- a/src/main/resources/templates/emprestimo/home.html
+++ b/src/main/resources/templates/emprestimo/home.html
@@ -13,7 +13,8 @@
 <body>
 	<nav class="navbar navbar-light bg-light">
 		<div class="container-fluid">
-			<a class="navbar-brand">Borrowed Money</a> <a href="/emprestimo/formulario">
+			<a class="navbar-brand">Borrowed Money</a> <a
+				href="/emprestimo/formulario">
 				<button class="btn btn-outline-primary">Novo</button>
 			</a>
 		</div>
@@ -65,7 +66,9 @@
 						</div>
 						<div class="row mt-3">
 							<div class="col">
-								<a href="#" class="btn btn-outline-primary">Detalhes</a>
+								<a href="#" class="btn btn-outline-info">Detalhes</a> 
+								<a href="#" class="btn btn-outline-warning">Alterar</a> 
+								<a th:href="@{/emprestimo/apagar/(id=${emprestimo.id})}" class="btn btn-outline-danger">Apagar</a>
 							</div>
 						</div>
 					</div>
