Adjustmant on layout

--- a/src/main/resources/templates/emprestimo/home.html
+++ b/src/main/resources/templates/emprestimo/home.html
@@ -21,8 +21,8 @@
 	</nav>
 	<div class="container">
 		<div class="row">
-			<div class="col mt-4" th:each="emprestimo : ${emprestimos.content}" style="float:left">
-				<div class="card" style="width: 18rem;">
+			<div class="col mt-4" th:each="emprestimo : ${emprestimos.content}">
+				<div class="card" style="width: 18rem; floar:left">
 					<div class="card-header">
 						<span th:text="${emprestimo.nome}">Marcos</span>
 					</div>
