add details form for borrowed

--- a/src/main/resources/templates/emprestimo/formulario.html
+++ b/src/main/resources/templates/emprestimo/formulario.html
@@ -24,21 +24,21 @@
 				<input type="text" class="form-control" name="nome" id="nome" aria-describedby="nomeHelp">
 				<div id="nomeHelp" class="form-text">Informe um nome para o emprestimo.</div>
 			</div>
-			<div class="mb-3">
-				<label for="valor" class="form-label">Valor</label>
-				<input type="number" class="form-control" placeholder="99999,99" name="valor">
+			<div class="form-floating mb-3 col-5 col-sm-4 col-md-3 col-xl-2">
+				<input type="number" class="form-control" placeholder="123456" id="valor" name="valor">
+				<label for="valor">Valor</label>
 			</div>
-			<div class="mb-3">
+			<div class="mb-3 col-5 col-sm-4 col-md-3 col-xl-2">
 				<label for="data" class="form-label">Data</label>
 				<input type="date" class="form-control" name="data">
 			</div>
-			<div class="mb-3">
+			<div class="mb-3 col-2 col-sm-2 col-md-1 col-xl-1">
 				<label for="percentual" class="form-label">Percentual</label>
-				<input type="number" class="form-control" placeholder="1" name="percentual">
+				<input type="text" class="form-control" name="percentual">
 			</div>
-			<div class="mb-3">
+			<div class="mb-3  col-5 col-sm-4 col-md-3 col-xl-2">
 				<label for="valorDevido" class="form-label">Amortizado</label>
-				<input type="number" class="form-control" placeholder="99999,99" name="valorDevido">
+				<input type="number" class="form-control" name="valorDevido">
 			</div>
 			<div class="mb-3">
   				<label for="observacao" class="form-label">Observação</label>
