--- a/src/main/resources/templates/emprestimo/juros-formulario.html
+++ b/src/main/resources/templates/emprestimo/juros-formulario.html
@@ -5,6 +5,6 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>CADASTRAR NOVO JUROS PARA O EMPRESTIMO</h1>
+	<h2>Juros Formulário!!!</h2>
 </body>
 </html>
