--- a/src/main/resources/templates/emprestimo/detalhe.html
+++ b/src/main/resources/templates/emprestimo/detalhe.html
@@ -52,7 +52,7 @@
 			</div>
 		</form>
 
-		<a href="/emprestimo/juros/formulario">
+		<a href="/juros/formulario">
 			<button class="btn btn-outline-primary">Juros</button>
 		</a>
 
