--- a/src/main/resources/templates/juros/formulario.html
+++ b/src/main/resources/templates/juros/formulario.html
@@ -19,7 +19,7 @@
 		</div>
 	</nav>
 	<div class="container">
-		<form action="juros/salvar" method="post">
+		<form action="/juros/salvar" method="post">
 			<div class="mb-3 col-5 col-sm-4 col-md-3 col-xl-2">
 				<label for="data" class="form-label">Data</label> <input type="date"
 					class="form-control" name="data">
